# genai_voicebot

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  index.html  pyproject.toml  requirements.txt
app/: __init__.py  audio.py  cache.py  config.py  exceptions.py  middleware.py  monitoring.py  pipeline.py  prompts.py  routes.py  session.py
app/services/: llm.py  transcription.py  tts.py
prompts/: evaluation_system.txt  interview_system.txt
static/css/: styles.css
static/js/: app.js  history.js  recorder.js  session.js  timer.js  visualizer.js  wav-encoder.js
templates/: index.html
tests/: conftest.py  test_audio.py  test_cache.py  test_config.py  test_pipeline.py  test_routes.py
