[project]
name = "genai-voicebot"
version = "1.0.0"
description = "AI Interview Assistant - voice-based interview practice with AI"
requires-python = ">=3.11"
dependencies = [
    "assemblyai>=0.35.0",
    "openai>=1.50.0",
    "elevenlabs>=1.0.0",
    "pydub>=0.25.1",
    "scipy>=1.14.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.1",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
